# FileMgr

./: .gitignore  README-zh_CN.md  README.md
rust-backend/: Cargo.toml
rust-backend/src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/native-menu/: App.xaml  App.xaml.cs  FileMgr.NativeMenu.csproj  MainWindow.xaml  MainWindow.xaml.cs  Models.cs  NativeMenuBuilder.cs  Program.cs  Win32.cs
src-tauri/src/: lib.rs  main.rs  win_app_id.rs
