[package]
name = "filemgr"
version = "1.0.0"
description = "FileMgr"
authors = ["you"]
edition = "2021"
autobins = false

[[bin]]
name = "FileMgr"
path = "src/main.rs"

[lib]
name = "filemgr_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-drag = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "tiff", "webp"] }
walkdir = "2.5"
window-vibrancy = "0.7.1"
rayon = "1.10"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Graphics_Dwm",
  "Win32_Graphics_Gdi",
  "Win32_System_Threading",
  "Win32_UI_Shell",
  "Win32_UI_Shell_Common",
  "Win32_UI_Shell_PropertiesSystem",
  "Win32_UI_Accessibility",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_SystemInformation",
  "Win32_Storage_FileSystem"
] }
